[package]
name = "centy-daemon"
version = "0.8.1"
edition = "2021"
description = "A file-based database engine that stores structured data as Markdown files with YAML frontmatter, exposed via gRPC"
authors = ["Centy Team"]
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"

[dependencies]
# Git worktree workspace management
worktree-io = "0.15.0"

# Storage engine
mdstore = "1.0.0"

# gRPC
tonic = "0.12"
tonic-reflection = "0.12"
tonic-web = "0.12"
prost = "0.13"

# HTTP/CORS/Tower
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
http = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Frontmatter parsing
gray_matter = "0.3"

# Cryptography (for SHA-256)
sha2 = "0.10"
hex = "0.4"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
humantime = "2"

# File system utilities
walkdir = "2"
replace-homedir = "0.1"

# Error handling
thiserror = "1"
anyhow = "1"
color-eyre = "0.6"
tracing-error = "0.2"

# TOML parsing (for user config)
toml = "0.8"

# Template engine
handlebars = "6"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Semantic versioning
semver = { version = "1", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "fmt",
] }
tracing-appender = "0.2"

# Home directory detection
dirs = "5"

# Async traits and lazy statics
async-trait = "0.1"
once_cell = "1"

# Regex for validation
regex = "1"

# Async utilities
futures = "0.3"

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Command existence checking
which = "6"

# Shell escaping for command construction
shell-escape = "0.1"
slug = "0.1.6"


[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
cargo-husky = { version = "1", default-features = false, features = [
    "precommit-hook",
    "prepush-hook",
    "user-hooks",
] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Enable pedantic lints
pedantic = { level = "warn", priority = -1 }

# Deny panic/unwrap/expect to enforce proper error handling
# These lints prevent runtime panics in favor of explicit error handling
# Test code is exempted via cfg_attr(test, allow(...)) in lib.rs and main.rs
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic_in_result_fn = "deny"
unwrap_in_result = "deny"
exit = "deny"

# Deny unvalidated arithmetic to prevent overflow panics in debug
# and silent wrapping in release builds
arithmetic_side_effects = "deny"

# Deny direct indexing/slicing to prevent index-out-of-bounds panics
# Use safe alternatives like .get(), .first(), .split_at() which return Option
indexing_slicing = "deny"
# Deny string slicing to prevent panics on non-UTF-8 character boundaries
string_slice = "deny"

# Warn on long functions - enforces refactoring into smaller functions
too_many_lines = "deny"

# Prefer map_or/map_or_else/is_some_and/is_none_or over map().unwrap_or()
map_unwrap_or = "deny"

# Allow noisy pedantic lints
missing_errors_doc = "allow"
result_large_err = "allow"
unnecessary_wraps = "allow"
must_use_candidate = "deny"
doc_markdown = "deny"
similar_names = "deny"
module_name_repetitions = "allow"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_sign_loss = "deny"
struct_excessive_bools = "deny"
single_match_else = "deny"
unused_self = "deny"
needless_pass_by_value = "deny"
items_after_statements = "deny"
match_same_arms = "deny"
wildcard_imports = "deny"
return_self_not_must_use = "deny"
format_push_string = "deny"
wrong_self_convention = "deny"
too_many_arguments = "allow"
enum_variant_names = "deny"
assigning_clones = "deny"
missing_panics_doc = "deny"
default_trait_access = "deny"
const_is_empty = "deny"
manual_let_else = "deny"
unused_async = "deny"
struct_field_names = "deny"
trivially_copy_pass_by_ref = "deny"
if_then_some_else_none = "deny"
or_fun_call = "deny"
redundant_closure_for_method_calls = "deny"
map_flatten = "deny"
needless_bitwise_bool = "deny"
filter_map_next = "deny"
cloned_instead_of_copied = "deny"
flat_map_option = "deny"
iter_filter_is_ok = "deny"
iter_filter_is_some = "deny"
needless_continue = "deny"
needless_pass_by_ref_mut = "deny"
from_iter_instead_of_collect = "deny"
implicit_clone = "deny"
range_plus_one = "deny"
semicolon_if_nothing_returned = "deny"
explicit_iter_loop = "deny"
explicit_into_iter_loop = "deny"
large_stack_arrays = "deny"
match_wildcard_for_single_variants = "deny"
needless_raw_string_hashes = "deny"
string_add_assign = "deny"
zero_sized_map_values = "deny"
naive_bytecount = "deny"
checked_conversions = "deny"
verbose_bit_mask = "deny"
unnested_or_patterns = "deny"
cast_lossless = "deny"
ptr_as_ptr = "deny"
ref_binding_to_reference = "deny"
iter_on_empty_collections = "deny"
iter_on_single_items = "deny"
into_iter_without_iter = "deny"
iter_without_into_iter = "deny"
lossy_float_literal = "deny"
float_cmp = "deny"
float_cmp_const = "deny"
linkedlist = "deny"
negative_feature_names = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
trait_duplication_in_bounds = "deny"
type_repetition_in_bounds = "deny"
manual_string_new = "deny"
collapsible_else_if = "deny"
collapsible_if = "deny"
partial_pub_fields = "deny"
pub_without_shorthand = "deny"
blanket_clippy_restriction_lints = "deny"
redundant_type_annotations = "deny"
error_impl_error = "deny"
deref_by_slicing = "deny"
format_collect = "deny"
if_not_else = "deny"
redundant_else = "deny"
string_lit_chars_any = "deny"
try_err = "deny"
mutex_atomic = "deny"
multiple_inherent_impl = "deny"
rest_pat_in_fully_bound_structs = "deny"
same_name_method = "deny"
unreachable = "deny"
verbose_file_reads = "deny"
non_ascii_literal = "deny"
renamed_function_params = "deny"
dbg_macro = "deny"
use_debug = "deny"
todo = "deny"
integer_division = "deny"
fn_to_numeric_cast_any = "deny"
missing_assert_message = "deny"
multiple_unsafe_ops_per_block = "deny"
print_stdout = "deny"
manual_is_ascii_check = "deny"
suspicious_xor_used_as_pow = "deny"
manual_flatten = "deny"
path_buf_push_overwrite = "deny"
large_futures = "deny"
used_underscore_binding = "deny"
from_str_radix_10 = "deny"
missing_fields_in_debug = "deny"
manual_next_back = "deny"
separated_literal_suffix = "deny"
large_include_file = "deny"
float_arithmetic = "deny"
future_not_send = "deny"
items_after_test_module = "deny"
mixed_read_write_in_expression = "deny"
modulo_arithmetic = "deny"
mutex_integer = "deny"
no_effect_underscore_binding = "deny"
should_panic_without_expect = "deny"
match_bool = "deny"
option_option = "deny"
nonstandard_macro_braces = "deny"
trivial_regex = "deny"
expl_impl_clone_on_copy = "deny"
significant_drop_tightening = "deny"
iter_not_returning_iterator = "deny"
read_zero_byte_vec = "deny"
only_used_in_recursion = "deny"
branches_sharing_code = "deny"
empty_drop = "deny"
ref_option = "deny"
ref_option_ref = "deny"
str_split_at_newline = "deny"
suboptimal_flops = "deny"
unused_peekable = "deny"
unnecessary_self_imports = "deny"
unnecessary_struct_initialization = "deny"
unused_rounding = "deny"
wildcard_in_or_patterns = "deny"
zombie_processes = "deny"
fallible_impl_from = "deny"
regex_creation_in_loops = "deny"
debug_assert_with_mut_call = "deny"
set_contains_or_insert = "deny"
needless_borrowed_reference = "deny"
expect_fun_call = "deny"
extend_with_drain = "deny"
collection_is_never_read = "deny"
or_then_unwrap = "deny"
io_other_error = "deny"
manual_midpoint = "deny"
empty_enum_variants_with_brackets = "deny"
match_wild_err_arm = "deny"
fn_params_excessive_bools = "deny"
disallowed_script_idents = "deny"
default_union_representation = "deny"
as_underscore = "deny"
large_digit_groups = "deny"
suspicious_doc_comments = "deny"
unnecessary_safety_comment = "deny"
pub_underscore_fields = "deny"
incompatible_msrv = "deny"
manual_c_str_literals = "deny"
manual_is_variant_and = "deny"
manual_rotate = "deny"
option_as_ref_cloned = "deny"
unnecessary_map_on_constructor = "deny"
unnecessary_get_then_check = "deny"
doc_lazy_continuation = "deny"
no_effect_replace = "deny"
manual_abs_diff = "deny"
sliced_string_as_bytes = "deny"
unnecessary_clippy_cfg = "deny"
manual_div_ceil = "deny"
precedence_bits = "deny"
manual_ok_err = "deny"
large_stack_frames = "deny"
host_endian_bytes = "deny"
little_endian_bytes = "deny"
big_endian_bytes = "deny"
cfg_not_test = "deny"
uninhabited_references = "deny"
empty_line_after_outer_attr = "deny"
empty_line_after_doc_comments = "deny"
doc_link_with_quotes = "deny"
needless_else = "deny"
large_types_passed_by_value = "deny"
manual_assert = "deny"
infinite_loop = "deny"
pathbuf_init_then_push = "deny"
iter_skip_zero = "deny"
used_underscore_items = "deny"
manual_unwrap_or_default = "deny"
non_zero_suggestions = "deny"
undocumented_unsafe_blocks = "deny"
doc_comment_double_space_linebreaks = "deny"
unconditional_recursion = "deny"
uninlined_format_args = "deny"
if_let_mutex = "deny"
cast_precision_loss = "deny"
unnecessary_semicolon = "deny"
needless_question_mark = "deny"
match_like_matches_macro = "deny"
unwrap_or_default = "deny"
single_element_loop = "deny"
option_env_unwrap = "deny"
non_minimal_cfg = "deny"
ignored_unit_patterns = "deny"
missing_asserts_for_indexing = "deny"
rc_clone_in_vec_init = "deny"
suspicious_operation_groupings = "deny"
semicolon_inside_block = "deny"
trailing_empty_array = "deny"
transmute_undefined_repr = "deny"
maybe_infinite_iter = "deny"
case_sensitive_file_extension_comparisons = "deny"
read_line_without_trim = "deny"
manual_bits = "deny"
borrow_as_ptr = "deny"
ptr_cast_constness = "deny"
unnecessary_box_returns = "deny"
unnecessary_literal_bound = "deny"
needless_borrows_for_generic_args = "deny"
manual_clamp = "deny"
clear_with_drain = "deny"
drain_collect = "deny"
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
suspicious_arithmetic_impl = "deny"
suspicious_op_assign_impl = "deny"
enum_glob_use = "deny"
field_reassign_with_default = "deny"
cast_nan_to_int = "deny"
eager_transmute = "deny"
manual_range_patterns = "deny"
identity_op = "deny"
skip_while_next = "deny"
useless_conversion = "deny"
needless_as_bytes = "deny"
manual_hash_one = "deny"
result_filter_map = "deny"
manual_swap = "deny"
iter_cloned_collect = "deny"
type_id_on_box = "deny"
unnecessary_min_or_max = "deny"
waker_clone_wake = "deny"
non_send_fields_in_send_ty = "deny"
unsafe_removed_from_name = "deny"
char_lit_as_u8 = "deny"
iter_nth = "deny"
manual_range_contains = "deny"
needless_if = "deny"
collapsible_match = "deny"
unnecessary_safety_doc = "deny"
wildcard_dependencies = "deny"
manual_ok_or = "deny"
suspicious_to_owned = "deny"
iter_nth_zero = "deny"
obfuscated_if_else = "deny"
redundant_at_rest_pattern = "deny"
match_str_case_mismatch = "deny"
stable_sort_primitive = "deny"
manual_strip = "deny"
vec_init_then_push = "deny"
single_char_pattern = "deny"
deref_addrof = "deny"
to_digit_is_some = "deny"
comparison_to_empty = "deny"
iter_next_slice = "deny"
bytes_count_to_len = "deny"
reversed_empty_ranges = "deny"
match_result_ok = "deny"
useless_format = "deny"
redundant_pattern_matching = "deny"
redundant_pattern = "deny"
double_must_use = "deny"
string_extend_chars = "deny"
seek_from_current = "deny"
seek_to_start_instead_of_rewind = "deny"
bool_to_int_with_if = "deny"
nonminimal_bool = "deny"
large_enum_variant = "deny"
enum_clike_unportable_variant = "deny"
empty_loop = "deny"
unimplemented = "deny"
missing_transmute_annotations = "deny"
needless_bool_assign = "deny"
repeat_vec_with_capacity = "deny"
needless_late_init = "deny"
manual_find = "deny"
unused_io_amount = "deny"
large_const_arrays = "deny"
repeat_once = "deny"
chars_last_cmp = "deny"
chars_next_cmp = "deny"
return_and_then = "deny"
copy_iterator = "deny"
needless_for_each = "deny"
range_zip_with_len = "deny"
non_canonical_clone_impl = "deny"
non_canonical_partial_ord_impl = "deny"
wrong_transmute = "deny"
transmuting_null = "deny"
from_raw_with_void_ptr = "deny"
swap_with_temporary = "deny"
iter_skip_next = "deny"
iter_count = "deny"
manual_contains = "deny"
into_iter_on_ref = "deny"
suspicious_splitn = "deny"
format_in_format_args = "deny"
to_string_in_format_args = "deny"
bool_assert_comparison = "deny"
suspicious_else_formatting = "deny"
if_same_then_else = "deny"
match_ref_pats = "deny"
ifs_same_cond = "deny"
partialeq_ne_impl = "deny"
manual_is_power_of_two = "deny"
no_effect = "deny"
missing_const_for_thread_local = "deny"
map_all_any_identity = "deny"
map_identity = "deny"
cmp_owned = "deny"
serde_api_misuse = "deny"
iter_overeager_cloned = "deny"
is_digit_ascii_radix = "deny"
neg_cmp_op_on_partial_ord = "deny"
suspicious_unary_op_formatting = "deny"
option_filter_map = "deny"
filter_map_bool_then = "deny"
explicit_counter_loop = "deny"
unused_enumerate_index = "deny"
unnecessary_fold = "deny"
unnecessary_lazy_evaluations = "deny"
unnecessary_to_owned = "deny"
useless_asref = "deny"
single_char_add_str = "deny"
possible_missing_comma = "deny"
panicking_overflow_checks = "deny"
mut_from_ref = "deny"
iter_next_loop = "deny"
drop_non_drop = "deny"
forget_non_drop = "deny"
out_of_bounds_indexing = "deny"
invalid_regex = "deny"
double_ended_iterator_last = "deny"
iterator_step_by_zero = "deny"
never_loop = "deny"
neg_multiply = "deny"
self_assignment = "deny"
while_let_on_iterator = "deny"
box_default = "deny"
default_instead_of_iter_empty = "deny"
needless_option_take = "deny"
print_literal = "deny"
write_literal = "deny"
writeln_empty_string = "deny"
println_empty_string = "deny"
option_as_ref_deref = "deny"
option_map_or_none = "deny"
ok_expect = "deny"
boxed_local = "deny"
inefficient_to_string = "deny"
map_collect_result_unit = "deny"
unnecessary_owned_empty_strings = "deny"
explicit_deref_methods = "deny"
legacy_numeric_constants = "deny"
manual_unwrap_or = "deny"
match_single_binding = "deny"
mem_replace_option_with_some = "deny"
mem_replace_with_default = "deny"
mem_replace_with_uninit = "deny"
result_unit_err = "deny"
range_minus_one = "deny"
result_map_or_into_option = "deny"
let_and_return = "deny"
explicit_write = "deny"
modulo_one = "deny"
unchecked_duration_subtraction = "deny"
duration_subsec = "deny"
inconsistent_digit_grouping = "deny"
needless_option_as_deref = "deny"
unusual_byte_groupings = "deny"
bool_comparison = "deny"
bytes_nth = "deny"
cast_abs_to_unsigned = "deny"
cast_slice_different_sizes = "deny"
collapsible_str_replace = "deny"
comparison_chain = "deny"
deprecated_semver = "deny"
disallowed_methods = "deny"
disallowed_names = "deny"
disallowed_types = "deny"
diverging_sub_expression = "deny"
duplicate_underscore_argument = "deny"
erasing_op = "deny"
excessive_precision = "deny"
float_equality_without_abs = "deny"
from_over_into = "deny"
inherent_to_string = "deny"
inherent_to_string_shadow_display = "deny"
init_numbered_fields = "deny"
inline_fn_without_body = "deny"
int_plus_one = "deny"
invalid_upcast_comparisons = "deny"
invisible_characters = "deny"
let_unit_value = "deny"
lines_filter_map_ok = "deny"
macro_use_imports = "deny"
map_clone = "deny"
match_overlapping_arm = "deny"
mistyped_literal_suffixes = "deny"
mixed_case_hex_literals = "deny"
module_inception = "deny"
must_use_unit = "deny"
needless_arbitrary_self_type = "deny"
needless_bool = "deny"
while_let_loop = "deny"
borrow_deref_ref = "deny"
zero_ptr = "deny"
suspicious_map = "deny"
len_zero = "deny"
len_without_is_empty = "deny"
needless_return = "deny"
search_is_some = "deny"
needless_splitn = "deny"
panicking_unwrap = "deny"
permissions_set_readonly_false = "deny"
precedence = "deny"
ptr_eq = "deny"
ptr_offset_with_cast = "deny"
question_mark = "deny"
recursive_format_impl = "deny"
redundant_closure_call = "deny"
redundant_field_names = "deny"
redundant_guards = "deny"
redundant_slicing = "deny"
redundant_static_lifetimes = "deny"
bind_instead_of_map = "deny"
should_implement_trait = "deny"
single_match = "deny"
string_lit_as_bytes = "deny"
suspicious_assignment_formatting = "deny"
swap_ptr_to_ref = "deny"
tabs_in_doc_comments = "deny"
to_string_trait_impl = "deny"
uninit_assumed_init = "deny"
unnecessary_filter_map = "deny"
unnecessary_find_map = "deny"
unnecessary_result_map_or_else = "deny"
unnecessary_map_or = "deny"
unnecessary_operation = "deny"
unused_format_specs = "deny"
useless_attribute = "deny"
useless_concat = "deny"
useless_vec = "deny"
zst_offset = "deny"
arc_with_non_send_sync = "deny"
absurd_extreme_comparisons = "deny"
almost_complete_range = "deny"
almost_swapped = "deny"
async_yields_async = "deny"
vec_box = "deny"
box_collection = "deny"
size_of_in_element_count = "deny"
approx_constant = "deny"
await_holding_invalid_type = "deny"
cmp_null = "deny"
deprecated_cfg_attr = "deny"
derive_ord_xor_partial_ord = "deny"
eq_op = "deny"
explicit_auto_deref = "deny"
impossible_comparisons = "deny"
literal_string_with_formatting_args = "deny"
derived_hash_with_manual_eq = "deny"
octal_escapes = "deny"
print_with_newline = "deny"
size_of_ref = "deny"
temporary_assignment = "deny"
useless_nonzero_new_unchecked = "deny"
while_immutable_condition = "deny"
write_with_newline = "deny"
zero_divided_by_zero = "deny"
zero_repeat_side_effects = "deny"
as_ptr_cast_mut = "deny"
create_dir = "deny"
decimal_literal_representation = "deny"
integer_division_remainder_used = "deny"
mem_forget = "deny"
print_in_format_impl = "deny"
unused_result_ok = "deny"

empty_docs = "deny"
deprecated_clippy_cfg_attr = "deny"
manual_pattern_char_comparison = "deny"
mixed_attributes_style = "deny"
multi_assignments = "deny"
no_mangle_with_rust_abi = "deny"
overly_complex_bool_expr = "deny"

redundant_feature_names = "deny"
redundant_locals = "deny"
single_range_in_vec_init = "deny"

type_complexity = "deny"
unsafe_derive_deserialize = "deny"
imprecise_flops = "deny"
map_with_unused_argument_over_ranges = "deny"
byte_char_slices = "deny"
char_indices_as_byte_indices = "deny"
declare_interior_mutable_const = "deny"
implicit_hasher = "deny"
implied_bounds_in_impls = "deny"
manual_inspect = "deny"
manual_slice_fill = "deny"
manual_try_fold = "deny"
missing_enforced_import_renames = "deny"
missing_safety_doc = "deny"
unicode_not_nfc = "deny"
redundant_as_str = "deny"
ref_as_ptr = "deny"
slow_vector_initialization = "deny"
transmute_int_to_bool = "deny"
transmute_ptr_to_ref = "deny"
unnecessary_fallible_conversions = "deny"
unreadable_literal = "deny"
crosspointer_transmute = "deny"
duplicate_mod = "deny"
duplicated_attributes = "deny"
extra_unused_lifetimes = "deny"
extra_unused_type_parameters = "deny"
filter_map_identity = "deny"
filter_next = "deny"
flat_map_identity = "deny"
four_forward_slashes = "deny"
get_first = "deny"
get_last_with_len = "deny"
impl_hash_borrow_with_str_and_bytes = "deny"
infallible_destructuring_match = "deny"
infallible_try_from = "deny"
infinite_iter = "deny"
inline_asm_x86_att_syntax = "deny"
inline_asm_x86_intel_syntax = "deny"
ip_constant = "deny"
iter_out_of_bounds = "deny"
join_absolute_paths = "deny"
just_underscores_and_digits = "deny"
let_underscore_future = "deny"
let_underscore_lock = "deny"
let_with_type_underscore = "deny"
lint_groups_priority = "deny"
macro_metavars_in_unsafe = "deny"
main_recursion = "deny"
manual_dangling_ptr = "deny"
manual_is_finite = "deny"
manual_is_infinite = "deny"
manual_is_multiple_of = "deny"
manual_main_separator_str = "deny"
manual_non_exhaustive = "deny"
manual_option_as_slice = "deny"
manual_rem_euclid = "deny"
manual_repeat_n = "deny"
manual_saturating_arithmetic = "deny"
manual_slice_size_calculation = "deny"
manual_str_repeat = "deny"
manual_while_let_some = "deny"
mismatching_type_param_order = "deny"
misrefactored_assign_op = "deny"
missing_spin_loop = "deny"
multiple_bound_locations = "deny"
mut_mut = "deny"
mut_mutex_lock = "deny"
mut_range_bound = "deny"
mutable_key_type = "deny"
needless_character_iteration = "deny"
needless_doctest_main = "deny"
needless_maybe_sized = "deny"
needless_parens_on_range_literals = "deny"
needless_pub_self = "deny"
non_octal_unix_permissions = "deny"
non_std_lazy_statics = "deny"
nonsensical_open_options = "deny"
owned_cow = "deny"
path_ends_with_ext = "deny"
readonly_write_lock = "deny"
redundant_async_block = "deny"
redundant_comparisons = "deny"
repr_packed_without_abi = "deny"
reserve_after_initialization = "deny"
same_functions_in_if_condition = "deny"
same_item_push = "deny"
short_circuit_statement = "deny"
suspicious_command_arg_space = "deny"
suspicious_open_options = "deny"
test_attr_in_doctest = "deny"
toplevel_ref_arg = "deny"
transmute_bytes_to_str = "deny"
transmute_int_to_non_zero = "deny"
transmute_null_to_fn = "deny"
transmute_ptr_to_ptr = "deny"
transmutes_expressible_as_ptr_casts = "deny"
trim_split_whitespace = "deny"
tuple_array_conversions = "deny"
unbuffered_bytes = "deny"
uninit_vec = "deny"
unit_cmp = "deny"
unit_hash = "deny"
unnecessary_debug_formatting = "deny"
unnecessary_first_then_check = "deny"
unnecessary_join = "deny"
unnecessary_literal_unwrap = "deny"
unneeded_wildcard_pattern = "deny"
unsound_collection_transmute = "deny"
useless_transmute = "deny"
vec_resize_to_zero = "deny"
while_float = "deny"
zero_prefixed_literal = "deny"
as_pointer_underscore = "deny"
assertions_on_constants = "deny"
assign_op_pattern = "deny"
bad_bit_mask = "deny"
blocks_in_conditions = "deny"
borrow_interior_mutable_const = "deny"
borrowed_box = "deny"
builtin_type_shadow = "deny"
clone_on_copy = "deny"
cast_enum_constructor = "deny"
cast_enum_truncation = "deny"
cast_ptr_alignment = "deny"
cast_slice_from_raw_parts = "deny"
cloned_ref_to_slice_refs = "deny"
coerce_container_to_any = "deny"
confusing_method_to_numeric_cast = "deny"
crate_in_macro_def = "deny"
default_constructed_unit_structs = "deny"
derivable_impls = "deny"
doc_broken_link = "deny"
doc_include_without_cfg = "deny"
doc_link_code = "deny"
doc_nested_refdefs = "deny"
doc_overindented_list_items = "deny"
doc_suspicious_footnotes = "deny"
double_comparisons = "deny"
double_parens = "deny"
elidable_lifetime_names = "deny"
empty_enum = "deny"
err_expect = "deny"
excessive_nesting = "deny"
fn_to_numeric_cast = "deny"
fn_to_numeric_cast_with_truncation = "deny"
for_kv_map = "deny"
ignore_without_reason = "deny"
implicit_saturating_add = "deny"
implicit_saturating_sub = "deny"
inconsistent_struct_constructor = "deny"
index_refutable_slice = "deny"
ineffective_bit_mask = "deny"
ineffective_open_options = "deny"
inverted_saturating_sub = "deny"
iter_kv_map = "deny"
iter_with_drain = "deny"
map_entry = "deny"
match_as_ref = "deny"
mem_replace_option_with_none = "deny"
min_max = "deny"
misnamed_getters = "deny"
op_ref = "deny"
partialeq_to_none = "deny"
pointer_format = "deny"
pointers_in_nomem_asm_block = "deny"
possible_missing_else = "deny"
redundant_allocation = "deny"
result_map_unit_fn = "deny"
single_component_path_imports = "deny"
single_option_map = "deny"
strlen_on_c_strings = "deny"
unit_arg = "deny"
unit_return_expecting_ord = "deny"
unnecessary_cast = "deny"
unnecessary_mut_passed = "deny"
unnecessary_sort_by = "deny"
unnecessary_unwrap = "deny"
upper_case_acronyms = "deny"
inline_always = "deny"
manual_retain = "deny"
manual_split_once = "deny"
manual_async_fn = "deny"
manual_filter = "deny"
manual_filter_map = "deny"
manual_find_map = "deny"
manual_ignore_case_cmp = "deny"
manual_instant_elapsed = "deny"
manual_map = "deny"
manual_memcpy = "deny"
inspect_for_each = "deny"
string_from_utf8_as_bytes = "deny"
unneeded_struct_pattern = "deny"
new_ret_no_self = "deny"
option_map_unit_fn = "deny"
not_unsafe_ptr_arg_deref = "deny"
needless_return_with_question_mark = "deny"
disallowed_macros = "deny"
self_named_constructors = "deny"
unused_unit = "deny"
needless_update = "deny"
new_without_default = "deny"
needless_match = "deny"
needless_range_loop = "deny"
ptr_arg = "deny"
many_single_char_names = "deny"
needless_lifetimes = "deny"
derive_partial_eq_without_eq = "deny"
redundant_clone = "deny"
needless_collect = "deny"
redundant_pub_crate = "deny"
needless_borrow = "deny"
clone_on_ref_ptr = "deny"
redundant_closure = "deny"
cognitive_complexity = "deny"
unneeded_field_pattern = "deny"
string_add = "deny"
impl_trait_in_params = "deny"
default_numeric_fallback = "deny"
needless_raw_strings = "deny"
else_if_without_else = "deny"
shadow_same = "deny"
too_long_first_doc_paragraph = "deny"
empty_structs_with_brackets = "deny"
non_exhaustive_omitted_patterns = "deny"
unnecessary_transmutes = "deny"
string_to_string = "deny"

[[bin]]
name = "centy-daemon"
path = "src/main.rs"

[workspace.metadata.dylint]
libraries = [
    { git = "https://github.com/tupe12334/agent_dylint_lints" },
]

# Debian package metadata (used by cargo-deb)
[package.metadata.deb]
maintainer = "Centy Team"
copyright = "2024 Centy Team"
license-file = ["LICENSE", "0"]
extended-description = """
Centy Daemon is a file-based database engine that stores structured data as Markdown files with YAML frontmatter.
It provides a gRPC API for CRUD operations, advanced search, entity linking, and multi-project management.
"""
depends = "libc6"
section = "utils"
priority = "optional"
assets = [
    [
        "target/release/centy-daemon",
        "usr/bin/",
        "755",
    ],
    [
        "packaging/linux/systemd/centy-daemon.service",
        "lib/systemd/system/",
        "644",
    ],
    [
        "README.md",
        "usr/share/doc/centy-daemon/",
        "644",
    ],
]

# RPM package metadata (used by cargo-generate-rpm)
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/centy-daemon", dest = "/usr/bin/centy-daemon", mode = "755" },
    { source = "packaging/linux/systemd/centy-daemon.service", dest = "/lib/systemd/system/centy-daemon.service", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/centy-daemon/README.md", mode = "644", doc = true },
]
